# Hack-Moscow-2019

./: .gitignore  README.md  dmitry_part.py  pyproject.toml  server.py
.ipynb_checkpoints/: README-checkpoint.md  gunicorn_config-checkpoint.py  server-checkpoint.py
hello-react/: package.json
hello-react/src/: App.css  App.js
hello-react/src/components/: HomepageImage.js  LOCATIONS.js
recsys/: predictor.py
recsys/history/: init.py  loader.py  locations_history.csv  requests_history.csv
