[tool.poetry]
name = "here_recommendation_system"
version = "0.1.0"
description = ""
authors = ["Some team"]

[tool.poetry.dependencies]
python = "^3.6"
gunicorn = "^19.9"
falcon = "^2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
